[package]
name = "gigatrace_ui"
version = "0.1.0"
authors = ["Tristan Hume <tristan@thume.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid" }
gigatrace = { path = "../" }
